minor layout issue of payment page.

--- a/ui/src/app/payment/payment.component.css
+++ b/ui/src/app/payment/payment.component.css
@@ -10,6 +10,8 @@
 }
 
 .paymentDiv{
+    width: 100%;
+    height: auto;
     margin-bottom: 50px;
 }
 
